feat(代码重写):hasExplicitStructuralInput和validateAssembleInput方法收紧